--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
+node_modules
 
 # misc
 .DS_Store
@@ -19,6 +11,12 @@
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# media and thumbnail files
+videos
+thumbnails
+tmp
