--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,25 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^0.27.2",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.3",
+        "chart.js": "^3.8.0",
         "firebase": "^9.8.1",
         "otp-input-react": "^0.3.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^2.1.3",
-        "web-vitals": "^2.1.4",
-        "axios": "^0.27.2",
-        "bootstrap": "^5.1.3",
-        "bootstrap-icons": "^1.8.3",
-        "@fortawesome/fontawesome-svg-core": "^6.1.1",
-        "@fortawesome/free-regular-svg-icons": "^6.1.1",
-        "@fortawesome/free-solid-svg-icons": "^6.1.1",
-        "@fortawesome/react-fontawesome": "^0.1.18"
+        "reactstrap": "^9.1.1",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
