--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "get-video-duration": "^4.1.0",
         "mongoose": "^6.3.4",
         "shortid": "^2.2.16",
+        "twilio": "^3.77.3",
         "razorpay": "^2.8.1",
         "uniqid": "^5.4.0",
         "uniquid": "^1.1.4",
