--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "bootstrap-icons": "^1.8.3",
         "chart.js": "^3.8.0",
         "firebase": "^9.8.1",
+        "js-cookie": "^3.0.1",
         "otp-input-react": "^0.3.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
