--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "author": "smit",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
         "get-video-duration": "^4.1.0",
         "mongoose": "^6.3.4",
+        "razorpay": "^2.8.1",
         "shortid": "^2.2.16",
         "twilio": "^3.77.3",
-        "razorpay": "^2.8.1",
         "uniqid": "^5.4.0",
         "uniquid": "^1.1.4",
         "uuid": "^8.3.2"
