--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,16 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
+        "@material-ui/core": "^4.12.4",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.8.7",
+        "@mui/styled-engine-sc": "^5.8.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,13 +22,14 @@
         "bootstrap-icons": "^1.8.3",
         "chart.js": "^3.8.0",
         "firebase": "^9.8.1",
-        "js-cookie": "^3.0.1",
         "otp-input-react": "^0.3.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^2.1.3",
+        "react-toastify": "^9.0.5",
         "reactstrap": "^9.1.1",
+        "styled-components": "^5.3.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
